@@ -53,16 +53,23 @@ make_system_path_relative_to_its_root ()
 is_path_readable_by_grub ()
 {
   path=$1
+  device=$2
+  relpath=$3
 
   # abort if path doesn't exist
   if test -e $path ; then : ;else
     return 1
   fi
 
+  if [ "${device}" = "" ] ; then
+    device=$(${grub_probe} --target=device $path)
+  fi
+  if [ "${relpath}" = "" ] ; then
+    relpath=$(${grub_mkrelpath} $path)
+  fi
+
   # abort if file read through GRUB doesn't match file read through system
   # facilities
-  device=$(${grub_probe} --target=device $path)
-  relpath=$(${grub_mkrelpath} $path)
   if ${grub_fstest} $device cmp $relpath $path > /dev/null 2>&1 ; then : ; else
     return 1
   fi
